--- a/src/app/components/secure/nav/nav.component.html
+++ b/src/app/components/secure/nav/nav.component.html
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <a class="navbar-brand d-flex align-items-center" routerLink="/dashboard">
             <img src="./../../../assets/logo agencia.png" alt="" width="70" height="70"
                 class="d-inline-block align-text-top">
             <span class="d-inline-block ms-2">Agencia</span>
         </a>
         <ul class="navbar-nav ms-auto flex-row">
             <li class="nav-item">
-                <a class="nav-link me-3" href="#">Personas</a>
+                <a class="nav-link me-3" routerLink="/personas">Personas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link me-3" href="#">Autos</a>
+                <a class="nav-link me-3" routerLink="/autos">Autos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link me-3" href="#">Modelos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link me-3" href="#">Cerrar Sesion</a>
+                <a class="nav-link me-3" routerLink="">Cerrar Sesion</a>
             </li>
         </ul>
     </div>
