--- a/src/app/components/public/login/login.component.html
+++ b/src/app/components/public/login/login.component.html
@@ -4,20 +4,21 @@
             <div class="card bg-dark text-white">
                 <div class="card-body rounded">
                     <h1 class="card-title text-center mb-4">Iniciar sesión</h1>
-                    <form class="px-3" (submit)="login()">
+                    <form class="px-3" (ngSubmit)="EnvioDatos()">
                         <div class="mb-3">
                             <label for="email" class="form-label">Correo electrónico</label>
-                            <input type="email" [(ngModel)]="email" class="form-control custom-input" name="email"
+                            <input type="email" [(ngModel)]="login.email" class="form-control custom-input" name="email"
                                 placeholder="Ingrese su correo electrónico" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Contraseña</label>
-                            <input type="password" [(ngModel)]="password" class="form-control custom-input" name="password"
+                            <input type="password" [(ngModel)]="login.password" class="form-control custom-input" name="password"
                                 placeholder="Ingrese su contraseña" required>
                         </div>
                         <div class="text-center">
                             <button type="submit" class="mt-3 mb-3 btn btn-primary">Iniciar sesión</button>
                         </div>
+                        <div *ngIf="error" class="error-message"><p class="text-center text-danger">{{ error }}</p></div>
                         <div class="crear">
                             <span>Si no tienes una cuenta <a routerLink="/register">Crear cuenta</a></span>
                         </div>
