--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -4,7 +4,7 @@
             <div class="card bg-dark text-white">
                 <div class="card-body rounded">
                     <h1 class="card-title text-center mb-4">Registrar</h1>
-                    <form class="px-3" (submit)="login()">
+                    <form class="px-3" >
                         <div class="mb-3">
                             <label for="name" class="form-label">Nombre</label>
                             <input type="text" [(ngModel)]="name" class="form-control custom-input" name="name"
