--- a/src/app/components/public/login/login.component.html
+++ b/src/app/components/public/login/login.component.html
@@ -12,13 +12,15 @@
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Contraseña</label>
-                            <input type="password" [(ngModel)]="login.password" class="form-control custom-input" name="password"
-                                placeholder="Ingrese su contraseña" required>
+                            <input type="password" [(ngModel)]="login.password" class="form-control custom-input"
+                                name="password" placeholder="Ingrese su contraseña" required>
                         </div>
                         <div class="text-center">
                             <button type="submit" class="mt-3 mb-3 btn btn-primary">Iniciar sesión</button>
                         </div>
-                        <div *ngIf="error" class="error-message"><p class="text-center text-danger">{{ error }}</p></div>
+                        <div *ngIf="error" class="error-message">
+                            <p class="text-center text-danger">{{ error }}</p>
+                        </div>
                         <div class="crear">
                             <span>Si no tienes una cuenta <a routerLink="/register">Crear cuenta</a></span>
                         </div>
