--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -4,29 +4,27 @@
             <div class="card bg-dark text-white">
                 <div class="card-body rounded">
                     <h1 class="card-title text-center mb-4">Registrar</h1>
-                    <form class="px-3" >
+                    <form class="px-3" (ngSubmit)="EnvioDatos()">
                         <div class="mb-3">
                             <label for="name" class="form-label">Nombre</label>
-                            <input type="text" [(ngModel)]="name" class="form-control custom-input" name="name"
-                                placeholder="Ingrese su nombre" required>
+                            <input type="text" [(ngModel)]="register.name" class="form-control custom-input"
+                                name="name" placeholder="Ingrese su nombre" required>
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Correo electrónico</label>
-                            <input type="email" [(ngModel)]="email" class="form-control custom-input" name="email"
-                                placeholder="Ingrese su correo electrónico" required>
+                            <input type="email" [(ngModel)]="register.email" class="form-control custom-input"
+                                name="email" placeholder="Ingrese su correo electrónico" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Contraseña</label>
-                            <input type="password" [(ngModel)]="password" class="form-control custom-input" name="password"
-                                placeholder="Ingrese su contraseña" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Confirma tu ontraseña</label>
-                            <input type="password" [(ngModel)]="confirmPassword" class="form-control custom-input" name="confirmPassword"
-                                placeholder="Ingrese su contraseña" required>
+                            <input type="password" [(ngModel)]="register.password" class="form-control custom-input"
+                                name="password" placeholder="Ingrese su contraseña" required>
                         </div>
                         <div class="text-center">
                             <button type="submit" class="mt-3 mb-3 btn btn-primary">Crear cuenta</button>
+                        </div>
+                        <div *ngIf="error" class="error-message">
+                            <p class="text-center text-danger">{{ error }}</p>
                         </div>
                         <div class="crear">
                             <span>Ya tienes una cuenta <a routerLink="/login">Iniciar sesion</a></span>
