--- a/src/app/components/secure/nav/nav.component.html
+++ b/src/app/components/secure/nav/nav.component.html
@@ -10,13 +10,7 @@
                 <a class="nav-link me-3" routerLink="/personas">Personas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link me-3" routerLink="/autos">Autos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link me-3" href="#">Modelos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link me-3" routerLink="">Cerrar Sesion</a>
+                <a class="nav-link me-3 cursor-pointer" (click)="cerrarSesion()">Cerrar Sesion</a>
             </li>
         </ul>
     </div>
