--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -21,7 +21,7 @@
                                 name="password" placeholder="Ingrese su contraseña" required>
                         </div>
                         <div class="text-center">
-                            <button type="submit" class="mt-3 mb-3 btn btn-primary">Crear cuenta</button>
+                            <button [@buttonError]="error ? 'error' : 'default'" type="submit" class="mt-3 mb-3 btn btn-primary">Crear cuenta</button>
                         </div>
                         <div *ngIf="error" class="error-message">
                             <p class="text-center text-danger">{{ error }}</p>
