--- a/src/app/components/secure/personas/personas.component.html
+++ b/src/app/components/secure/personas/personas.component.html
@@ -1,3 +1,36 @@
 <app-nav></app-nav>
-<app-btn-crear></app-btn-crear>
-<app-tabla></app-tabla>
+
+
+
+<!-- usamos la metodologia bem para usar scss -->
+<div class="containerPersona">
+    <div class="containerPersona__sub">
+        <div class="containerPersona__sub--title">
+            <h1>Personas</h1>
+            <button (click)="openCreateModal()">Crear</button>
+        </div>
+        <div class="containerPersona__sub--table">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Apellido Paterno </th>
+                        <th>Apellido Materno</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let persona of personas">
+                        <td><b>{{ persona.nombre }}</b></td>
+                        <td>{{ persona.apellido_p }}</td>
+                        <td>{{ persona.apellido_m }}</td>
+                        <td>
+                            <button (click)="openEditModal(persona)">Edit</button>
+                            <button (click)="deletePersona(persona)">Delete</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
